--- a/ECommerce.App/ECommerce.App.csproj
+++ b/ECommerce.App/ECommerce.App.csproj
@@ -10,12 +10,15 @@
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageReference Include="System.Data.SqlClient" Version="4.8.5" />
     <PackageReference Include="Dapper" Version="2.0.151" />
+    <PackageReference Include="MySqlConnector" Version="2.2.7" />
   </ItemGroup>
 
   <ItemGroup>
     <None Remove="Helper\" />
+    <None Remove="Service\" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Helper\" />
+    <Folder Include="Service\" />
   </ItemGroup>
 </Project>
