Maintainend the code

--- a/ECommerce.App/appsettings.Development.json
+++ b/ECommerce.App/appsettings.Development.json
@@ -4,5 +4,8 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=DESKTOP-AEUM6LS; Database=ECommerce; Trusted_Connection=True; MultipleActiveResultSets=true"
   }
 }
