--- a/ECommerce.App/appsettings.json
+++ b/ECommerce.App/appsettings.json
@@ -5,8 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "DefaultConnection": {
-    "ConnectionString": ""
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=DESKTOP-AEUM6LS; Database=ECommerce; Trusted_Connection=True; MultipleActiveResultSets=true"
   },
   "AllowedHosts": "*"
 }
