FIxed Authentication issues

--- a/ECommerce.App/appsettings.json
+++ b/ECommerce.App/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=DESKTOP-AEUM6LS; Database=ECommerce; Trusted_Connection=True; MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=Server=DESKTOP-AEUM6LS; Database=Ecommerce;Trusted_Connection=True;"
   },
   "AllowedHosts": "*"
 }
