Making SQl server to SQl Authentication #

--- a/ECommerce.App/appsettings.json
+++ b/ECommerce.App/appsettings.json
@@ -8,9 +8,9 @@
   
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=desktop-33ojo2e\\sqlexpress;Database=dbECommerce;Trusted_Connection=True;MultipleActiveResultSets=true;Encrypt=True;TrustServerCertificate=True"
+    "DefaultConnection": "Server=desktop-33ojo2e\\sqlexpress;Database=dbECommerce;Trusted_Connection=False;MultipleActiveResultSets=true;Encrypt=True;TrustServerCertificate=True"
 
   }
-
+  
 
 }
