Added Order features

--- a/ECommerce.App/ECommerce.App.csproj
+++ b/ECommerce.App/ECommerce.App.csproj
@@ -17,4 +17,8 @@
     <None Remove="Helper\" />
     <None Remove="Service\" />
   </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Views\Order\" />
+  </ItemGroup>
 </Project>
