--- a/ECommerce.App/appsettings.json
+++ b/ECommerce.App/appsettings.json
@@ -8,5 +8,12 @@
   "ConnectionStrings": {
     "DefaultConnection": "Server=Server=DESKTOP-AEUM6LS; Database=Ecommerce;Trusted_Connection=True;"
   },
+  "MailSettings": {
+    "Mail": "testshah24@gmail.com",
+    "DisplayName": "noreply",
+    "Password": "P@ssword321_852",
+    "Host": "smtp.gmail.com",
+    "Port": 587
+  },
   "AllowedHosts": "*"
 }
