change for emailverification#

--- a/ECommerce.App/appsettings.json
+++ b/ECommerce.App/appsettings.json
@@ -8,14 +8,21 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=Server=DESKTOP-AEUM6LS; Database=Ecommerce;Trusted_Connection=True;"
+    "DefaultConnection": "Server=desktop-33ojo2e\\sqlexpress; Database=Ecommerce;Trusted_Connection=True;"
   },
   "MailSettings": {
-    "Mail": "testshah24@gmail.com",
+    "Mail": "anchaljungbomjan17cse072@gmail.com",
     "DisplayName": "noreply",
-    "Password": "P@ssword321_852",
+    "Password": "lmsq yswk tzot sasx",
     "Host": "smtp.gmail.com",
     "Port": 587
   },
+  
+    //"EmailSettings": {
+    //  "Username": "your@gmail.com",
+    //  "AppPassword": "your_app_password_here"
+    //},
+  
+
   "AllowedHosts": "*"
 }
